@@ -7,3 +7,5 @@ objspace.o: $(HDRS) $(ruby_headers) \
             $(top_srcdir)/node.h $(top_srcdir)/gc.h \
 	    $(hdrdir)/ruby/re.h $(top_srcdir)/node.h $(top_srcdir)/gc.h \
 	    $(top_srcdir)/regint.h $(top_srcdir)/internal.h
+gc_hook.o: $(HDRS) $(ruby_headers) $(hdrdir)/ruby/debug.h
+object_tracing.o: $(HDRS) $(ruby_headers) $(hdrdir)/ruby/debug.h
